Fix text overflow

--- a/client/src/components/EventCard.css
+++ b/client/src/components/EventCard.css
@@ -29,8 +29,6 @@
     text-align: left;
     overflow: hidden;
     max-height: 35px;
-
-
 }
 
 .card-event-club-name {
@@ -43,6 +41,8 @@
     overflow: hidden; 
     white-space: nowrap;  
     text-overflow: ellipsis; 
+   
+    max-width: 300px;
 }
 
 .card-event-right-col {
